[package]
name = "cedar-camera"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canonical-error = "0.1.0"
log = "0.4.19"
env_logger = "0.10.0"
image = "0.24.6"
chrono = "0.4.0"
asi_camera2 = { version = "0.2.0", path = "../asi_camera2" }
clap = { version = "4.3.21", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1.77"
futures = "0.3.30"
libcamera = "0.2.3"
