[package]
name = "cedar-camera"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canonical-error = "0.1.0"
log = "0.4.19"
env_logger = "0.10.0"
image = "0.25.1"
chrono = "0.4.0"
asi_camera2 = { version = "0.2.0", path = "../asi_camera2" }
cedar_detect = { version = "0.8.0", path = "../cedar-detect" }
clap = { version = "4.3.21", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1.77"
futures = "0.3.30"
libcamera = { version = "0.3.0", path = "./libcamera-rs/libcamera" }
imageproc = "0.25.0"
fast_image_resize = "4.0.0"

[lints.clippy]
await_holding_lock = "warn"
